--- a/src/components/RowInput/RowInput.css
+++ b/src/components/RowInput/RowInput.css
@@ -1,4 +1,5 @@
 .input-cell {
+  display: inline-block;
   width: 120px;
 }
 
